--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     }
 }
 
-greendao{
+greendao {
     schemaVersion 1
     targetGenDir "src/main/java"
 }
@@ -38,6 +38,7 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'junit:junit:4.12'
+    compile 'com.android.support:support-v4:25.3.1'
+    testCompile 'junit:junit:4.12'
 }
